@@ -34,7 +34,10 @@ add to it).
    ISEqual now is collective and returns true only if each processor has the same
    indices 
 
-  PF now contains the type PFMATLAB with -pf_type matlab -pf_matlab matlab_commands  
+   ISGetSize() now returns global parallel size, ISGetLocalSize() returns local size
+
+  PF
+    added the type PFMATLAB with -pf_type matlab -pf_matlab matlab_commands  
 
   Draw
   
